tests/sksl/errors/OpaqueTypeConstruction.glsl
### Compilation failed:

error: 4: cannot construct 'sampler'
    func(sampler(a));
         ^^^^^^^^^^
1 error
